# ChenTianRust

04_CLI/httpie/: Cargo.toml
04_CLI/httpie/src/: main.rs
13_Trait/add_trait/src/: add1.rs  main.rs
firstProject/scrape_url/: Cargo.toml
firstProject/scrape_url/src/: main.rs
test_rust_proj/: Cargo.toml
test_rust_proj/src/: main.rs  mod1.rs
test_rust_proj/src/foldmod/: fruit.rs
