[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = '1' #错误处理
clap = "4.3.10" #命令行解析
colored = "2" #命令终端多彩显示
jsonxf = "1.1" #JSON pretty print 格式化
mime = "0.3" #处理mime类型
reqwest = {version = "0.11",features = ["json"]}# HTTP客户端
tokio = {version = "1",features = ['full']}#异步处理库
